[gd_scene load_steps=33 format=4 uid="uid://8fcjad7sd4gq"]

[ext_resource type="Script" uid="uid://bmkwbjas0ep82" path="res://systems/moab/moab_explosion_system.gd" id="1_ctw1c"]
[ext_resource type="PackedScene" uid="uid://fvoq4j85fbwd" path="res://systems/stats_manager.tscn" id="1_j8dkt"]
[ext_resource type="Script" uid="uid://dxicxe0tvx28m" path="res://world.gd" id="2_2d1u3"]
[ext_resource type="Script" uid="uid://b0mdeooldsu15" path="res://enemy_spawner.gd" id="3_e2ivd"]
[ext_resource type="Script" uid="uid://bhk4kqmlpwyv0" path="res://world/levelgen.gd" id="3_pnepw"]
[ext_resource type="PackedScene" uid="uid://62qa0lv1bhdx" path="res://entities/enemies/bat/bat.tscn" id="4_bgsfg"]
[ext_resource type="TileSet" uid="uid://ci0bxhrhedi27" path="res://world/tileset/test_tileset.tres" id="4_e2ivd"]
[ext_resource type="PackedScene" uid="uid://vp4hhi7lbt7d" path="res://world/buildings/winch.tscn" id="4_ora6h"]
[ext_resource type="TileSet" uid="uid://1s8d18ai2k57" path="res://world/tileset/ore_tileset.tres" id="5_bgsfg"]
[ext_resource type="PackedScene" uid="uid://c5457i8ubkrc7" path="res://entities/enemies/spiky_ball/spiky_ball_enemy.tscn" id="6_2d1u3"]
[ext_resource type="PackedScene" uid="uid://be4tedtvsf8on" path="res://entities/player/player.tscn" id="6_8qn7j"]
[ext_resource type="Script" uid="uid://dgalf5pstb0iw" path="res://entities/throwables/bomb/bomb_type.gd" id="7_cnkka"]
[ext_resource type="PackedScene" uid="uid://bq84mpxun851f" path="res://entities/moab/moab_entity.tscn" id="8_537hp"]
[ext_resource type="PackedScene" uid="uid://jc5sht43d6gw" path="res://entities/enemies/enemy.tscn" id="9_3oat4"]
[ext_resource type="PackedScene" uid="uid://dqawvbjg7bayk" path="res://entities/enemies/skeleton_bomber/skeleton_bomber_enemy.tscn" id="9_pnepw"]
[ext_resource type="Script" uid="uid://1x04lpb258os" path="res://world/detectors/player_detector_area_2d.gd" id="10_n80mf"]
[ext_resource type="PackedScene" uid="uid://bkh5wheo7tg4h" path="res://entities/item/item_entity.tscn" id="11_7118b"]
[ext_resource type="Script" uid="uid://cr0u8ykoigma" path="res://ui/bomb_timer/bomb_ui.gd" id="12_i5h41"]
[ext_resource type="PackedScene" uid="uid://787nmru65xmp" path="res://ui/health/health_bar.tscn" id="13_sw03q"]
[ext_resource type="Script" uid="uid://b2x8g2xixii70" path="res://ui/inventory/inventory_control.gd" id="14_db8se"]
[ext_resource type="Resource" uid="uid://diae5nc080sux" path="res://entities/player/player_bomb_inventory.tres" id="15_ntsrs"]
[ext_resource type="PackedScene" uid="uid://caoy1avvlxhx0" path="res://ui/inventory/test_inventory_item_control.tscn" id="16_ibvot"]
[ext_resource type="Resource" uid="uid://ctoa5b8j1n1x3" path="res://entities/player/player_inventory.tres" id="17_wj6ne"]
[ext_resource type="Script" uid="uid://b3r1glubcsdwt" path="res://ui/upgrade/upgrade_gui.gd" id="18_4rmyb"]
[ext_resource type="PackedScene" uid="uid://df3b6w0eshfhw" path="res://ui/upgrade/upgrade_button.tscn" id="19_tdh2o"]
[ext_resource type="Resource" uid="uid://b6nkhnlvgtk7s" path="res://systems/upgrades/upgrade_bomb_hardness.tres" id="20_2obmt"]
[ext_resource type="Resource" uid="uid://b6xkpnkwkffbg" path="res://systems/upgrades/upgrade_bomb_radius.tres" id="21_2jcs7"]

[sub_resource type="Gradient" id="Gradient_qhcbd"]
offsets = PackedFloat32Array(0, 0.298561, 0.697842, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.978008, 0.978008, 0.978008, 1, 0.436611, 0.436611, 0.436611, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6a2be"]
gradient = SubResource("Gradient_qhcbd")
fill = 1
fill_from = Vector2(0.517094, 0.470085)
fill_to = Vector2(0.863248, 0.196581)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2ivd"]
size = Vector2(1469.63, 868.875)

[sub_resource type="Curve" id="Curve_lc2xo"]
_limits = [0.0, 1000.0, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1000), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvswv"]
size = Vector2(536, 224)

[node name="Game" type="Node"]

[node name="StatsManager" parent="." instance=ExtResource("1_j8dkt")]

[node name="MoabExplosionSystem" type="Node" parent="."]
script = ExtResource("1_ctw1c")
bomb_timer_starting_value = 305.0

[node name="World" type="Node2D" parent="." groups=["world"]]
script = ExtResource("2_2d1u3")

[node name="Winch" parent="World" instance=ExtResource("4_ora6h")]
position = Vector2(-3.945, -3300)

[node name="MainCamera" type="Camera2D" parent="World"]
position = Vector2(-32, -3328)
scale = Vector2(2, 2)
zoom = Vector2(0.5, 0.5)

[node name="PointLight2D" type="PointLight2D" parent="World/MainCamera"]
position = Vector2(-17.5, -15)
scale = Vector2(11.125, 5.75)
color = Color(0.57872, 0.35134, 0.22798, 1)
energy = 2.77
blend_mode = 2
texture = SubResource("GradientTexture2D_6a2be")
texture_scale = 2.84

[node name="Level" type="Node2D" parent="World"]
script = ExtResource("3_pnepw")

[node name="CaveBlocks" type="TileMapLayer" parent="World/Level" groups=["navigation_polygon_source_geometry_group"]]
tile_map_data = PackedByteArray("AAD2/5P/AQAAAAEAAAD2/5T/AQAAAAEAAAD2/5j/AQAAAAEAAAD2/5n/AQAAAAEAAAD2/5r/AQAAAAEAAAD2/5v/AQAAAAEAAAD3/5P/AQAAAAEAAAD4/5P/AQAAAAEAAAD5/5P/AQAAAAEAAAD6/5P/AQAAAAEAAAD7/5P/AQAAAAEAAAD8/5P/AQAAAAEAAAD9/5P/AQAAAAEAAAD+/5P/AQAAAAEAAAD//5P/AQAAAAEAAAAAAJP/AQAAAAEAAAABAJP/AQAAAAEAAAACAJP/AQAAAAEAAAADAJP/AQAAAAEAAAAEAJP/AQAAAAEAAAAFAJP/AQAAAAEAAAAGAJP/AQAAAAEAAAAHAJP/AQAAAAEAAAAIAJP/AQAAAAEAAAAIAJT/AQAAAAEAAAAIAJX/AQAAAAEAAAAIAJb/AQAAAAEAAAAIAJf/AQAAAAEAAAAIAJj/AQAAAAEAAAAIAJn/AQAAAAEAAAAIAJr/AQAAAAEAAAAIAJv/AQAAAAEAAADq/4z/AQAAAAEAAADq/43/AQAAAAEAAADq/47/AQAAAAEAAADq/4//AQAAAAEAAADq/5D/AQAAAAEAAADq/5H/AQAAAAEAAADq/5L/AQAAAAEAAADq/5P/AQAAAAEAAADq/5T/AQAAAAEAAADq/5X/AQAAAAEAAADq/5b/AQAAAAEAAADq/5f/AQAAAAEAAADq/5j/AQAAAAEAAADq/5n/AQAAAAEAAADq/5r/AQAAAAEAAADq/5v/AQAAAAEAAADr/4z/AQAAAAEAAADr/43/AQAAAAEAAADr/47/AQAAAAEAAADr/4//AQAAAAEAAADr/5D/AQAAAAEAAADr/5H/AQAAAAEAAADr/5L/AQAAAAEAAADr/5P/AQAAAAEAAADr/5T/AQAAAAEAAADr/5X/AQAAAAEAAADr/5b/AQAAAAEAAADr/5f/AQAAAAEAAADr/5j/AQAAAAEAAADr/5n/AQAAAAEAAADr/5r/AQAAAAEAAADr/5v/AQAAAAEAAADs/4z/AQAAAAEAAADs/43/AQAAAAEAAADs/47/AQAAAAEAAADs/4//AQAAAAEAAADs/5D/AQAAAAEAAADs/5H/AQAAAAEAAADs/5L/AQAAAAEAAADs/5P/AQAAAAEAAADs/5T/AQAAAAEAAADs/5v/AQAAAAEAAADt/4z/AQAAAAEAAADt/43/AQAAAAEAAADt/47/AQAAAAEAAADt/4//AQAAAAEAAADt/5D/AQAAAAEAAADt/5H/AQAAAAEAAADt/5L/AQAAAAEAAADt/5P/AQAAAAEAAADt/5T/AQAAAAEAAADt/5v/AQAAAAEAAADu/4z/AQAAAAEAAADu/43/AQAAAAEAAADu/47/AQAAAAEAAADu/4//AQAAAAEAAADu/5D/AQAAAAEAAADu/5H/AQAAAAEAAADu/5L/AQAAAAEAAADu/5P/AQAAAAEAAADu/5T/AQAAAAEAAADu/5v/AQAAAAEAAADv/4z/AQAAAAEAAADv/43/AQAAAAEAAADv/47/AQAAAAEAAADv/4//AQAAAAEAAADv/5D/AQAAAAEAAADv/5H/AQAAAAEAAADv/5L/AQAAAAEAAADv/5P/AQAAAAEAAADv/5T/AQAAAAEAAADv/5v/AQAAAAEAAADw/4z/AQAAAAEAAADw/43/AQAAAAEAAADw/47/AQAAAAEAAADw/4//AQAAAAEAAADw/5D/AQAAAAEAAADw/5H/AQAAAAEAAADw/5L/AQAAAAEAAADw/5P/AQAAAAEAAADw/5T/AQAAAAEAAADw/5v/AQAAAAEAAADx/4z/AQAAAAEAAADx/43/AQAAAAEAAADx/47/AQAAAAEAAADx/4//AQAAAAEAAADx/5D/AQAAAAEAAADx/5H/AQAAAAEAAADx/5L/AQAAAAEAAADx/5P/AQAAAAEAAADx/5T/AQAAAAEAAADx/5v/AQAAAAEAAADy/4z/AQAAAAEAAADy/43/AQAAAAEAAADy/47/AQAAAAEAAADy/4//AQAAAAEAAADy/5D/AQAAAAEAAADy/5H/AQAAAAEAAADy/5L/AQAAAAEAAADy/5P/AQAAAAEAAADy/5T/AQAAAAEAAADy/5v/AQAAAAEAAADz/4z/AQAAAAEAAADz/43/AQAAAAEAAADz/47/AQAAAAEAAADz/4//AQAAAAEAAADz/5D/AQAAAAEAAADz/5H/AQAAAAEAAADz/5L/AQAAAAEAAADz/5P/AQAAAAEAAADz/5T/AQAAAAEAAADz/5v/AQAAAAEAAAD0/4z/AQAAAAEAAAD0/43/AQAAAAEAAAD0/47/AQAAAAEAAAD0/4//AQAAAAEAAAD0/5D/AQAAAAEAAAD0/5H/AQAAAAEAAAD0/5L/AQAAAAEAAAD0/5P/AQAAAAEAAAD0/5T/AQAAAAEAAAD0/5j/AQAAAAEAAAD0/5n/AQAAAAEAAAD0/5r/AQAAAAEAAAD0/5v/AQAAAAEAAAD1/4z/AQAAAAEAAAD1/43/AQAAAAEAAAD1/47/AQAAAAEAAAD1/4//AQAAAAEAAAD1/5D/AQAAAAEAAAD1/5H/AQAAAAEAAAD1/5L/AQAAAAEAAAD1/5P/AQAAAAEAAAD1/5T/AQAAAAEAAAD1/5j/AQAAAAEAAAD1/5n/AQAAAAEAAAD1/5r/AQAAAAEAAAD1/5v/AQAAAAEAAAD2/4z/AQAAAAEAAAD2/43/AQAAAAEAAAD2/47/AQAAAAEAAAD2/4//AQAAAAEAAAD2/5D/AQAAAAEAAAD2/5H/AQAAAAEAAAD2/5L/AQAAAAEAAAD3/4z/AQAAAAEAAAD3/43/AQAAAAEAAAD3/47/AQAAAAEAAAD3/4//AQAAAAEAAAD3/5D/AQAAAAEAAAD3/5H/AQAAAAEAAAD3/5L/AQAAAAEAAAD4/4z/AQAAAAEAAAD4/43/AQAAAAEAAAD4/47/AQAAAAEAAAD4/4//AQAAAAEAAAD4/5D/AQAAAAEAAAD4/5H/AQAAAAEAAAD4/5L/AQAAAAEAAAD5/4z/AQAAAAEAAAD5/43/AQAAAAEAAAD5/47/AQAAAAEAAAD5/4//AQAAAAEAAAD5/5D/AQAAAAEAAAD5/5H/AQAAAAEAAAD5/5L/AQAAAAEAAAD6/4z/AQAAAAEAAAD6/43/AQAAAAEAAAD6/47/AQAAAAEAAAD6/4//AQAAAAEAAAD6/5D/AQAAAAEAAAD6/5H/AQAAAAEAAAD6/5L/AQAAAAEAAAD7/4z/AQAAAAEAAAD7/43/AQAAAAEAAAD7/47/AQAAAAEAAAD7/4//AQAAAAEAAAD7/5D/AQAAAAEAAAD7/5H/AQAAAAEAAAD7/5L/AQAAAAEAAAD8/4z/AQAAAAEAAAD8/43/AQAAAAEAAAD8/47/AQAAAAEAAAD8/4//AQAAAAEAAAD8/5D/AQAAAAEAAAD8/5H/AQAAAAEAAAD8/5L/AQAAAAEAAAD9/4z/AQAAAAEAAAD9/43/AQAAAAEAAAD9/47/AQAAAAEAAAD9/4//AQAAAAEAAAD9/5D/AQAAAAEAAAD9/5H/AQAAAAEAAAD9/5L/AQAAAAEAAAD+/4z/AQAAAAEAAAD+/43/AQAAAAEAAAD+/47/AQAAAAEAAAD+/4//AQAAAAEAAAD+/5D/AQAAAAEAAAD+/5H/AQAAAAEAAAD+/5L/AQAAAAEAAAD//4z/AQAAAAEAAAD//43/AQAAAAEAAAD//47/AQAAAAEAAAD//4//AQAAAAEAAAD//5D/AQAAAAEAAAD//5H/AQAAAAEAAAD//5L/AQAAAAEAAAAAAIz/AQAAAAEAAAAAAI3/AQAAAAEAAAAAAI7/AQAAAAEAAAAAAI//AQAAAAEAAAAAAJD/AQAAAAEAAAAAAJH/AQAAAAEAAAAAAJL/AQAAAAEAAAABAIz/AQAAAAEAAAABAI3/AQAAAAEAAAABAI7/AQAAAAEAAAABAI//AQAAAAEAAAABAJD/AQAAAAEAAAABAJH/AQAAAAEAAAABAJL/AQAAAAEAAAACAIz/AQAAAAEAAAACAI3/AQAAAAEAAAACAI7/AQAAAAEAAAACAI//AQAAAAEAAAACAJD/AQAAAAEAAAACAJH/AQAAAAEAAAACAJL/AQAAAAEAAAADAIz/AQAAAAEAAAADAI3/AQAAAAEAAAADAI7/AQAAAAEAAAADAI//AQAAAAEAAAADAJD/AQAAAAEAAAADAJH/AQAAAAEAAAADAJL/AQAAAAEAAAAEAIz/AQAAAAEAAAAEAI3/AQAAAAEAAAAEAI7/AQAAAAEAAAAEAI//AQAAAAEAAAAEAJD/AQAAAAEAAAAEAJH/AQAAAAEAAAAEAJL/AQAAAAEAAAAFAIz/AQAAAAEAAAAFAI3/AQAAAAEAAAAFAI7/AQAAAAEAAAAFAI//AQAAAAEAAAAFAJD/AQAAAAEAAAAFAJH/AQAAAAEAAAAFAJL/AQAAAAEAAAAGAIz/AQAAAAEAAAAGAI3/AQAAAAEAAAAGAI7/AQAAAAEAAAAGAI//AQAAAAEAAAAGAJD/AQAAAAEAAAAGAJH/AQAAAAEAAAAGAJL/AQAAAAEAAAAHAIz/AQAAAAEAAAAHAI3/AQAAAAEAAAAHAI7/AQAAAAEAAAAHAI//AQAAAAEAAAAHAJD/AQAAAAEAAAAHAJH/AQAAAAEAAAAHAJL/AQAAAAEAAAAIAIz/AQAAAAEAAAAIAI3/AQAAAAEAAAAIAI7/AQAAAAEAAAAIAI//AQAAAAEAAAAIAJD/AQAAAAEAAAAIAJH/AQAAAAEAAAAIAJL/AQAAAAEAAAAJAIz/AQAAAAEAAAAJAI3/AQAAAAEAAAAJAI7/AQAAAAEAAAAJAI//AQAAAAEAAAAJAJD/AQAAAAEAAAAJAJH/AQAAAAEAAAAJAJL/AQAAAAEAAAAKAIz/AQAAAAEAAAAKAI3/AQAAAAEAAAAKAI7/AQAAAAEAAAAKAI//AQAAAAEAAAAKAJD/AQAAAAEAAAAKAJH/AQAAAAEAAAAKAJL/AQAAAAEAAAALAIz/AQAAAAEAAAALAI3/AQAAAAEAAAALAI7/AQAAAAEAAAALAI//AQAAAAEAAAALAJD/AQAAAAEAAAALAJH/AQAAAAEAAAALAJL/AQAAAAEAAAAMAIz/AQAAAAEAAAAMAI3/AQAAAAEAAAAMAI7/AQAAAAEAAAAMAI//AQAAAAEAAAAMAJD/AQAAAAEAAAAMAJH/AQAAAAEAAAAMAJL/AQAAAAEAAAANAIz/AQAAAAEAAAANAI3/AQAAAAEAAAANAI7/AQAAAAEAAAANAI//AQAAAAEAAAANAJD/AQAAAAEAAAANAJH/AQAAAAEAAAANAJL/AQAAAAEAAAAOAIz/AQAAAAEAAAAOAI3/AQAAAAEAAAAOAI7/AQAAAAEAAAAOAI//AQAAAAEAAAAOAJD/AQAAAAEAAAAOAJH/AQAAAAEAAAAOAJL/AQAAAAEAAAAPAIz/AQAAAAEAAAAPAI3/AQAAAAEAAAAPAI7/AQAAAAEAAAAPAI//AQAAAAEAAAAPAJD/AQAAAAEAAAAPAJH/AQAAAAEAAAAPAJL/AQAAAAEAAAAQAIz/AQAAAAEAAAAQAI3/AQAAAAEAAAAQAI7/AQAAAAEAAAAQAI//AQAAAAEAAAAQAJD/AQAAAAEAAAAQAJH/AQAAAAEAAAAQAJL/AQAAAAEAAAARAIz/AQAAAAEAAAARAI3/AQAAAAEAAAARAI7/AQAAAAEAAAARAI//AQAAAAEAAAARAJD/AQAAAAEAAAARAJH/AQAAAAEAAAARAJL/AQAAAAEAAAASAIz/AQAAAAEAAAASAI3/AQAAAAEAAAASAI7/AQAAAAEAAAASAI//AQAAAAEAAAASAJD/AQAAAAEAAAASAJH/AQAAAAEAAAASAJL/AQAAAAEAAAAJAJP/AQAAAAEAAAAJAJT/AQAAAAEAAAAJAJX/AQAAAAEAAAAJAJb/AQAAAAEAAAAJAJf/AQAAAAEAAAAJAJj/AQAAAAEAAAAJAJn/AQAAAAEAAAAJAJr/AQAAAAEAAAAJAJv/AQAAAAEAAAAKAJP/AQAAAAEAAAAKAJT/AQAAAAEAAAAKAJX/AQAAAAEAAAAKAJb/AQAAAAEAAAAKAJf/AQAAAAEAAAAKAJj/AQAAAAEAAAAKAJn/AQAAAAEAAAAKAJr/AQAAAAEAAAAKAJv/AQAAAAEAAAALAJP/AQAAAAEAAAALAJT/AQAAAAEAAAALAJX/AQAAAAEAAAALAJb/AQAAAAEAAAALAJf/AQAAAAEAAAALAJj/AQAAAAEAAAALAJn/AQAAAAEAAAALAJr/AQAAAAEAAAALAJv/AQAAAAEAAAAMAJP/AQAAAAEAAAAMAJT/AQAAAAEAAAAMAJX/AQAAAAEAAAAMAJb/AQAAAAEAAAAMAJf/AQAAAAEAAAAMAJj/AQAAAAEAAAAMAJn/AQAAAAEAAAAMAJr/AQAAAAEAAAAMAJv/AQAAAAEAAAANAJP/AQAAAAEAAAANAJT/AQAAAAEAAAANAJX/AQAAAAEAAAANAJb/AQAAAAEAAAANAJf/AQAAAAEAAAANAJj/AQAAAAEAAAANAJn/AQAAAAEAAAANAJr/AQAAAAEAAAANAJv/AQAAAAEAAAAOAJP/AQAAAAEAAAAOAJT/AQAAAAEAAAAOAJX/AQAAAAEAAAAOAJb/AQAAAAEAAAAOAJf/AQAAAAEAAAAOAJj/AQAAAAEAAAAOAJn/AQAAAAEAAAAOAJr/AQAAAAEAAAAOAJv/AQAAAAEAAAAPAJP/AQAAAAEAAAAPAJT/AQAAAAEAAAAPAJX/AQAAAAEAAAAPAJb/AQAAAAEAAAAPAJf/AQAAAAEAAAAPAJj/AQAAAAEAAAAPAJn/AQAAAAEAAAAPAJr/AQAAAAEAAAAPAJv/AQAAAAEAAAAQAJP/AQAAAAEAAAAQAJT/AQAAAAEAAAAQAJX/AQAAAAEAAAAQAJb/AQAAAAEAAAAQAJf/AQAAAAEAAAAQAJj/AQAAAAEAAAAQAJn/AQAAAAEAAAAQAJr/AQAAAAEAAAAQAJv/AQAAAAEAAAARAJP/AQAAAAEAAAARAJT/AQAAAAEAAAARAJX/AQAAAAEAAAARAJb/AQAAAAEAAAARAJf/AQAAAAEAAAARAJj/AQAAAAEAAAARAJn/AQAAAAEAAAARAJr/AQAAAAEAAAARAJv/AQAAAAEAAAASAJP/AQAAAAEAAAASAJT/AQAAAAEAAAASAJX/AQAAAAEAAAASAJb/AQAAAAEAAAASAJf/AQAAAAEAAAASAJj/AQAAAAEAAAASAJn/AQAAAAEAAAASAJr/AQAAAAEAAAASAJv/AQAAAAEAAAATAIz/AQAAAAEAAAATAI3/AQAAAAEAAAATAI7/AQAAAAEAAAATAI//AQAAAAEAAAATAJD/AQAAAAEAAAATAJH/AQAAAAEAAAATAJL/AQAAAAEAAAATAJP/AQAAAAEAAAATAJT/AQAAAAEAAAATAJX/AQAAAAEAAAATAJb/AQAAAAEAAAATAJf/AQAAAAEAAAATAJj/AQAAAAEAAAATAJn/AQAAAAEAAAATAJr/AQAAAAEAAAATAJv/AQAAAAEAAAAUAIz/AQAAAAEAAAAUAI3/AQAAAAEAAAAUAI7/AQAAAAEAAAAUAI//AQAAAAEAAAAUAJD/AQAAAAEAAAAUAJH/AQAAAAEAAAAUAJL/AQAAAAEAAAAUAJP/AQAAAAEAAAAUAJT/AQAAAAEAAAAUAJX/AQAAAAEAAAAUAJb/AQAAAAEAAAAUAJf/AQAAAAEAAAAUAJj/AQAAAAEAAAAUAJn/AQAAAAEAAAAUAJr/AQAAAAEAAAAUAJv/AQAAAAEAAAAVAIz/AQAAAAEAAAAVAI3/AQAAAAEAAAAVAI7/AQAAAAEAAAAVAI//AQAAAAEAAAAVAJD/AQAAAAEAAAAVAJH/AQAAAAEAAAAVAJL/AQAAAAEAAAAVAJP/AQAAAAEAAAAVAJT/AQAAAAEAAAAVAJX/AQAAAAEAAAAVAJb/AQAAAAEAAAAVAJf/AQAAAAEAAAAVAJj/AQAAAAEAAAAVAJn/AQAAAAEAAAAVAJr/AQAAAAEAAAAVAJv/AQAAAAEAAAD3/5v/AQAAAAEAAAD4/5v/AQAAAAEAAAD5/5v/AQAAAAEAAAD6/5v/AQAAAAEAAAD7/5v/AQAAAAEAAAD8/5v/AQAAAAEAAAACAJv/AQAAAAEAAAADAJv/AQAAAAEAAAAEAJv/AQAAAAEAAAAFAJv/AQAAAAEAAAAGAJv/AQAAAAEAAAAHAJv/AQAAAAEAAAA=")
tile_set = ExtResource("4_e2ivd")

[node name="OreIndicators" type="TileMapLayer" parent="World/Level"]
tile_set = ExtResource("5_bgsfg")

[node name="TestSpawnPointIndicator" type="TileMapLayer" parent="World/Level"]
tile_set = ExtResource("5_bgsfg")

[node name="NavMeshes" type="Node2D" parent="World/Level"]

[node name="Spawner" type="Node2D" parent="World" node_paths=PackedStringArray("occupied_tilemap")]
position = Vector2(128, -3280)
script = ExtResource("3_e2ivd")
enemies = Dictionary[PackedScene, int]({
ExtResource("4_bgsfg"): 1,
ExtResource("6_2d1u3"): 2,
ExtResource("9_pnepw"): 4
})
occupied_tilemap = NodePath("../Level/CaveBlocks")

[node name="SpawnTimer" type="Timer" parent="World/Spawner"]
wait_time = 5.0
autostart = true

[node name="SpawnZones" type="Node2D" parent="World/Spawner"]

[node name="LeftSpawn" type="CollisionShape2D" parent="World/Spawner/SpawnZones"]
position = Vector2(-738, 1083)
shape = SubResource("RectangleShape2D_e2ivd")

[node name="RightSpawn" type="CollisionShape2D" parent="World/Spawner/SpawnZones"]
position = Vector2(735, 1083)
shape = SubResource("RectangleShape2D_e2ivd")

[node name="Player" parent="World" instance=ExtResource("6_8qn7j")]
position = Vector2(128, -3280)
collision_mask = 3
available_bomb_types = Array[ExtResource("7_cnkka")]([null])
throw_force_curve = SubResource("Curve_lc2xo")
max_speed = 200
acceleration = 5000
ground_deceleration = 800
air_deceleration = 500
jump_power = 380
max_fall_speed = 10000
fall_acceleration = 550

[node name="HealthComponent" parent="World/Player" index="6"]
maximum_health = 50
is_invulnerable = true

[node name="MoabEntity" parent="World" node_paths=PackedStringArray("moab_explosion_system") instance=ExtResource("8_537hp")]
position = Vector2(-192, -3256)
moab_explosion_system = NodePath("../../MoabExplosionSystem")

[node name="Enemy3" parent="World" instance=ExtResource("9_pnepw")]
position = Vector2(-528, -3265)

[node name="Enemy2" parent="World" instance=ExtResource("6_2d1u3")]
visible = false
position = Vector2(-601, -3263)

[node name="Enemy" parent="World" instance=ExtResource("9_3oat4")]
visible = false
position = Vector2(160, -3360)

[node name="SpawnAreaPlayerDetector" type="Area2D" parent="World"]
position = Vector2(-32, -3328)
collision_layer = 0
collision_mask = 2
script = ExtResource("10_n80mf")
metadata/_custom_type_script = "uid://1x04lpb258os"

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/SpawnAreaPlayerDetector"]
position = Vector2(12, -16)
shape = SubResource("RectangleShape2D_rvswv")

[node name="ItemEntity" parent="World" instance=ExtResource("11_7118b")]
position = Vector2(-128, -3256)

[node name="GUI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 63.0
grow_horizontal = 2

[node name="BombProgressBar" type="ProgressBar" parent="GUI/HUD/VBoxContainer" node_paths=PackedStringArray("bomb_explosion_system", "bomb_progress_bar", "time_display")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
show_percentage = false
script = ExtResource("12_i5h41")
bomb_explosion_system = NodePath("../../../../MoabExplosionSystem")
bomb_progress_bar = NodePath(".")
time_display = NodePath("TimeDisplay")

[node name="TimeDisplay" type="Label" parent="GUI/HUD/VBoxContainer/BombProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" parent="GUI/HUD/VBoxContainer" node_paths=PackedStringArray("health_component") instance=ExtResource("13_sw03q")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 6
health_component = NodePath("../../../../World/Player/HealthComponent")

[node name="InventoryGUI2" type="PanelContainer" parent="GUI/HUD" node_paths=PackedStringArray("control_parent")]
layout_mode = 2
offset_top = 240.0
offset_right = 192.0
offset_bottom = 432.0
script = ExtResource("14_db8se")
inventory = ExtResource("15_ntsrs")
item_control = ExtResource("16_ibvot")
control_parent = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HUD/InventoryGUI2"]
layout_mode = 2

[node name="InventoryGUI" type="PanelContainer" parent="GUI/HUD" node_paths=PackedStringArray("control_parent")]
layout_mode = 0
offset_top = 32.0
offset_right = 192.0
offset_bottom = 224.0
script = ExtResource("14_db8se")
inventory = ExtResource("17_wj6ne")
item_control = ExtResource("16_ibvot")
control_parent = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HUD/InventoryGUI"]
layout_mode = 2

[node name="UpgradeGUI" type="Control" parent="GUI" node_paths=PackedStringArray("spawn_area_detector")]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -448.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("18_4rmyb")
spawn_area_detector = NodePath("../../World/SpawnAreaPlayerDetector")

[node name="NinePatchRect" type="ColorRect" parent="GUI/UpgradeGUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
color = Color(0.193653, 0.193653, 0.193653, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/UpgradeGUI"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="UpgradeButton" parent="GUI/UpgradeGUI/HBoxContainer" groups=["player"] instance=ExtResource("19_tdh2o")]
layout_mode = 2
upgrade = ExtResource("20_2obmt")

[node name="Control" type="Control" parent="GUI/UpgradeGUI/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="UpgradeButton2" parent="GUI/UpgradeGUI/HBoxContainer" instance=ExtResource("19_tdh2o")]
layout_mode = 2
upgrade = ExtResource("21_2jcs7")

[connection signal="timeout" from="World/Spawner/SpawnTimer" to="World/Spawner" method="_on_spawn_timer_timeout"]

[editable path="World/Player"]
